2012-05-21  Stephen Chenney  <schenney@chromium.org>

        [Chromium] REGRESSION: Assertion failure on svg/custom/acid3-test-77.html
        https://bugs.webkit.org/show_bug.cgi?id=86715

        Reviewed by Nikolas Zimmermann.

        * platform/chromium/test_expectations.txt: Removing expectation for acid3 test.

2012-05-21  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: switch buildDominatedNodes function to front-end calculated _dominatorsTree
        https://bugs.webkit.org/show_bug.cgi?id=87022

        The new version is using _dominatorsTree array that was build at front-end.

        Reviewed by Yury Semikhatsky.

        * inspector/profiler/heap-snapshot-expected.txt:
        * inspector/profiler/heap-snapshot.html:

2012-05-21  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: introduce a helper for HeapSnapshot post-processing tests.
        https://bugs.webkit.org/show_bug.cgi?id=87009

        the sample:
        var builder = new InspectorTest.HeapSnapshotBuilder();
        var debuggerNode = new InspectorTest.HeapNode("Debugger");
        builder.rootNode.linkNode(debuggerNode, InspectorTest.HeapEdge.Type.element);

        var windowNode = new InspectorTest.HeapNode("Window");
        builder.rootNode.linkNode(windowNode, InspectorTest.HeapEdge.Type.shortcut);

        debuggerNode.linkNode(windowNode, InspectorTest.HeapEdge.Type.property, "windowProperty");
        return builder.generateSnapshot();

        Reviewed by Yury Semikhatsky.

        * inspector/profiler/heap-snapshot-test.js:
        (initialize_HeapSnapshotTest):
        (initialize_HeapSnapshotTest.):
        * inspector/profiler/heap-snapshot.html:

2012-05-21  Csaba Osztrogonác  <ossy@webkit.org>

        [WK2] WTR needs an implementation of setAsynchronousSpellCheckingEnabled.
        https://bugs.webkit.org/show_bug.cgi?id=81042

        Unreviewed gardening. Move skipped tests (and add one more test) to wk2/Skipped