@@ -1,0 +1,8 @@
+<style>
+div {
+    border-color: green;
+    border-style: solid;
+    border-width: 3px 10px;
+}
+</style>
+<div>This text should have top and bottom borders of 3px and left and right borders of 10px</div>
