@@ -1,0 +1,10 @@
+<style>
+div {
+  border-color: green;
+  border-style: solid;
+  border-width: -webkit-var(a) -webkit-var(b);
+  -webkit-var-a: 3px;
+  -webkit-var-b: 10px
+}
+</style>
+<div>This text should have top and bottom borders of 3px and left and right borders of 10px</div>
